helloApache/helloApacheDeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-apache-deployment
  labels: 
    app: hello-apache
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-apache
  template:
    metadata:
      name: my-container
      labels:
        app: hello-apache
    spec:
      containers:
        - name: hello-apache
          image: imageID
