helloApache/helloApacheService.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-apache-svc
  labels:
    app: hello-apache
  annotations:
        alb.ingress.kuberenetes.io/healthcheck-path: /index.html
spec:
  type: NodePort
  selector:
    app: hello-apache
  ports:
    - port: 80
      targetPort: 80
